--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,7 +1,7 @@
 form {
     max-width: 100%;
     background-color: #f7f7f7;
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
+    box-shadow: 7px 7px 15px rgba(0, 0, 0, 25%);
     border-radius: 20px;
     padding: 8px 80px;
 }
