--- a/src/componentes/Equipo/Equipo.css
+++ b/src/componentes/Equipo/Equipo.css
@@ -1,6 +1,5 @@
 .equipo {
     width: 100%;
-    background-color: #D9F7E9;
     padding: 32px;
     text-align: center;
     font-size: 32px;
@@ -10,6 +9,6 @@
     display: inline-block;
     font-weight: 400;
     color: #212121;
-    border-bottom: 4px solid #57C278;
+    border-bottom: 4px solid;
     padding-bottom: 8px;
 }
