Creando Componente tarjeta Colaborador

--- a/src/componentes/Equipo/Equipo.css
+++ b/src/componentes/Equipo/Equipo.css
@@ -12,3 +12,9 @@
     border-bottom: 4px solid;
     padding-bottom: 8px;
 }
+
+.colaboradores {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
