--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,17 +1,17 @@
-form {
-    max-width: 100%;
+.formulario {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 80px 50px;
+    gap: 20px;
+}
+
+.formulario form {
     background-color: #f7f7f7;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 25%);
     border-radius: 20px;
-    padding: 8px 80px;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    gap: 20px;
-    margin: 80px;
+    padding: 8px 100px;
+    flex: 1;
 }
 
 
